<resources>
    <string name="app_name">HANGIN</string>
    <string name="image">image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_your_password">Forget Your Password</string>
    <string name="sign_in">Sign IN</string>
    <string name="or">or</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="sign_up">Sign UP</string>
</resources>
