<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <ImageView
        android:id="@+id/signin_img"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        android:src="@drawable/img_login_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/signin_img_background"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:background="@drawable/gradient"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/signin_img_hangin"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:contentDescription="@string/image"
        android:src="@drawable/img_hangin_primary"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signin_email_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/style_edittext"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:hint="@string/email"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/signin_img_hangin"
        tools:ignore="LabelFor,TextFields" />

    <EditText
        android:id="@+id/password_et"
        android:inputType="text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/style_edittext"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/signin_email_et"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/forget_passowrd_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_your_password"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/password_et"
        android:layout_marginTop="8dp"
        android:background="@drawable/style_button"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="#FFFFFF"/>

    <Button
        android:id="@+id/signin_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/forget_passowrd_button"
        android:background="@drawable/style_button2"
        android:layout_marginTop="16dp"
        android:textColor="@color/s_color"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/or_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/signin_button"
        android:layout_marginTop="24dp"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/facebook_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/style_button2"
        android:drawableStart="@drawable/ic_facebook_logo"
        android:paddingStart="24dp"
        android:paddingEnd="16dp"
        android:text="@string/facebook"
        android:textColor="@color/facebook_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/google_button"
        app:layout_constraintEnd_toEndOf="@id/guideline_center"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/or_tv" />

    <Button
        android:id="@+id/google_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/google"
        app:layout_constraintStart_toStartOf="@id/guideline_center"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/or_tv"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/style_button2"
        android:textColor="@color/Google_color"
        android:drawableStart="@drawable/ic_google_plus_social_logotype"
        android:paddingStart="24dp"
        android:paddingEnd="16dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/dont_have_account_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_an_account"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_center"
        app:layout_constraintTop_toBottomOf="@id/facebook_button"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:textColor="#FFFFFF"/>

    <Button
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:background="AA@drawable/style_button2"
        app:layout_constraintStart_toStartOf="@id/guideline_center"
        app:layout_constraintTop_toTopOf="@id/dont_have_account_tv"
        app:layout_constraintBottom_toBottomOf="@id/dont_have_account_tv"
        android:paddingEnd="16dp"
        android:paddingStart="1dp"
        android:textStyle="bold"/>
</androidx.constraintlayout.widget.ConstraintLayout>